<resources>
    <string name="app_name">LePigeonRebelle</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_debts">Debts</string>


    <string name="new_member">New Friend</string>

    <string name="group_form_name">Group Form</string>
    <string name="ib_desc_group_type">Group Type</string>
    <string name="title_save_group">Save</string>
    <string name="label_group_name">Group Name</string>
    <string name="hint_group_name">Paris Trip, Christmas 2017, &#8230;</string>
    <string name="title_group_type_modal">Choose a type</string>
    <string name="label_group_members">Group Members</string>
    <string name="add_friend">Add a Friend</string>
    <string name="choose_friend">Who do you wish to add?</string>

    <string name="title_activity_splash_screen">LePigeonRebelle!</string>
    <string name="button_start">Let\'s Start!</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint_budget">0.00</string>
    <string name="text_member_name">John Doe</string>
    <string name="content_desc_member_avatar">Member Avatar</string>
    <string name="content_desc_remove_member">Remove Member</string>
    <string name="title_fragment_groups">My Groups</string>
    <string name="title_fragment_friends">My Friends</string>
    <string name="title_fragment_debts">All Debts</string>

    <!-- New User Modal -->
    <string name="title_new_user_modal">New Friend</string>
    <string name="content_new_user_modal">Add a new friend!</string>
    <string name="hint_input_new_user">Friend\'s name</string>
    <string name="positive_new_user_modal">Save</string>
    <string name="negative_new_user_modal">Cancel</string>

    <!-- Group Activity -->
    <string name="title_activity_group">Group</string>
    <string name="title_group_expenses">Expenses</string>
    <string name="title_group_debts">Debts</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- ExpenseCategory modal -->
    <string name="title_expense_type_modal">Choose a category</string>

</resources>
